--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -17,15 +17,23 @@
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
     template_facts:
-      - src: "profiles.ini"
-        dest: "{{ user_home }}/.mozilla/firefox"
-      - src: "bookmarks.html"
-        dest: "{{ user_home }}/.mozilla/firefox/custom.user"
       - src: "user.js"
         dest: "{{ user_home }}/.mozilla/firefox/custom.user"
   tags:
     - "user_font"
     - "template_firefox"
+
+- import_tasks: "{{ helpers }}/copy.yml"
+  vars:
+    copy_facts:
+      - src: "profiles.ini"
+        dest: "{{ user_home }}/.mozilla/firefox"
+      - src: "bookmarks.html"
+        dest: "{{ user_home }}/.mozilla/firefox/custom.user"
+      - src: "xulstore.json"
+        dest: "{{ user_home }}/.mozilla/firefox/custom.user"
+        backup: True
+  tags: "copy_firefox"
 
 - import_tasks: "{{ helpers }}/launcher.yml"
   vars:
