--- a/roles/tor_browser/tasks/main.yml
+++ b/roles/tor_browser/tasks/main.yml
@@ -3,3 +3,20 @@
     package_apt_facts:
       install:
         - "torbrowser-launcher"
+
+- import_tasks: "{{ helpers }}/template.yml"
+  vars:
+    template_facts:
+      - src: "user.js"
+        dest: "{{ tor_browser_config_dir }}"
+  tags:
+    - "user_font"
+    - "template_tor_browser"
+
+- import_tasks: "{{ helpers }}/copy.yml"
+  vars:
+    copy_facts:
+      - src: "bookmarks.html"
+        dest: "{{ tor_browser_config_dir }}"
+        backup: True
+  tags: "copy_tor_browser"
