--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -30,7 +30,9 @@
     "yaml"
   ],
   "cSpell.userWords": ["repo"],
+  "css.validate": false,
   "editor.accessibilitySupport": "off",
+  "editor.autoClosingQuotes": "always",
   "editor.foldingStrategy": "indentation",
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
@@ -54,11 +56,14 @@
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "emmet.includeLanguages": {
-    "javascript": "javascriptreact"
+    "javascript": "javascriptreact",
+    "jsx": "javascriptreact",
+    "jsx-attr": "javascriptreact"
   },
   "eslint.autoFixOnSave": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "extensions.autoCheckUpdates": false,
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
   "extensions.showRecommendationsOnlyOnDemand": true,
@@ -70,10 +75,13 @@
     "**/tmp": true
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
+  "less.validate": false,
   "markdown.preview.fontFamily": "{{ user_font }}, monospace",
   "markdown.preview.fontSize": 16,
+  "prettier.stylelintIntegration": true,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "{{ ansible_playbook_python }}",
+  "scss.validate": false,
   "search.location": "panel",
   "search.showLineNumbers": true,
   "telemetry.enableCrashReporter": false,
