--- a/roles/inkscape/tasks/main.yml
+++ b/roles/inkscape/tasks/main.yml
@@ -15,3 +15,11 @@
       - src: "preferences.xml"
         dest: "{{ user_config }}/inkscape"
   tags: "copy_inkscape"
+
+- import_tasks: "{{ helpers }}/mime.yml"
+  vars:
+    mime_facts:
+      entry_name: "inkscape"
+      type:
+        - "image/svg+xml"
+  tags: "mime"
