feat(alias): add new aliases

--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -31,3 +31,6 @@
       debug:
         msg: "Create your own git config yourself"
   tags: "git_config"
+
+- import_tasks: "{{ helpers }}/alias.yml"
+  tags: "alias_git"
