--- a/roles/bin/tasks/main.yml
+++ b/roles/bin/tasks/main.yml
@@ -4,12 +4,14 @@
       install:
         - "ffmpeg"
         - "libvips42"
+        - "xclip"
 
 - import_tasks: "{{ helpers }}/package_pip.yml"
   vars:
     package_pip_facts:
       install:
         - "pyvips"
+        - "pyperclip"
 
 - import_tasks: "{{ helpers }}/copy.yml"
   vars:
