refactor(keepassxc): update settings

--- a/roles/keepassxc/templates/keepassxc.ini
+++ b/roles/keepassxc/templates/keepassxc.ini
@@ -19,6 +19,7 @@ RememberLastKeyFiles=true
 SearchLimitGroup=true
 SingleInstance=true
 SSHAgent=false
+UpdateCheckMessageShown=true
 UseAtomicSaves=true
 UseGroupIconOnEntryCreation=true
 
