refactor(zsh_syntax_highlighting): merge zsh_syntax_highlighting and zsh role

--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -3,6 +3,7 @@
     package_apt_facts:
       install:
         - "zsh"
+        - "zsh-syntax-highlighting"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
