--- a/roles/firefox/tasks/librefox.yml
+++ b/roles/firefox/tasks/librefox.yml
@@ -24,16 +24,4 @@
     path: "/usr/lib/firefox/mozilla.cfg"
     regexp: '{{ "^" ~ (item.key ~ ",") | regex_escape() }}'
     line: '{{ item.key ~ '', '' ~ item.value ~ ");" }}'
-  loop:
-    - key: 'defaultPref("places.history.enabled"'
-      value: "true"
-    - key: 'lockPref("network.cookie.lifetimePolicy"'
-      value: "0"
-    - key: 'defaultPref("privacy.sanitize.sanitizeOnShutdown"'
-      value: "false"
-    - key: 'lockPref("media.autoplay.default"'
-      value: "1"
-    - key: 'lockPref("network.trr.mode"'
-      value: "5"
-    - key: 'lockPref("ui.use_standins_for_native_colors"'
-      value: "false"
+  loop: "{{ librefox_config }}"
