--- a/roles/gimp/tasks/main.yml
+++ b/roles/gimp/tasks/main.yml
@@ -1,8 +1,3 @@
-- import_tasks: "{{ helpers }}/repo.yml"
-  vars:
-    repo_facts:
-      - repo: "ppa:otto-kesselgulasch/gimp"
-
 - import_tasks: "{{ helpers }}/package_apt.yml"
   vars:
     package_apt_facts:
@@ -14,6 +9,7 @@
   vars:
     copy_facts:
       - src: "gimprc"
-        dest: "{{ user_config }}/GIMP/2.10"
-        backup: True
+        dest: "{{ gimp_config_path }}"
+      - src: "sessionrc"
+        dest: "{{ gimp_config_path }}"
   tags: "copy_gimp"
