--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -32,3 +32,5 @@ librefox_config:
     value: "false"
   - key: 'lockPref("webgl.disable-fail-if-major-performance-caveat"'
     value: "false"
+  - key: 'lockPref("dom.event.contextmenu.enabled"'
+    value: "true"
