refactor(svgo): add keepRoleAttr option

--- a/roles/svgo/files/.svgo.yml
+++ b/roles/svgo/files/.svgo.yml
@@ -42,7 +42,8 @@ plugins:
   - removeScriptElement: true
   - removeStyleElement: true
   - removeTitle: true
-  - removeUnknownsAndDefaults: true
+  - removeUnknownsAndDefaults:
+      keepRoleAttr: true
   - removeUnusedNS: true
   - removeUselessDefs: true
   - removeUselessStrokeAndFill: true
