refactor(svgo): add dimension attributes

--- a/roles/svgo/files/.svgo.yml
+++ b/roles/svgo/files/.svgo.yml
@@ -52,3 +52,7 @@ plugins:
   - removeXMLProcInst: true
   - reusePaths: false
   - sortAttrs: true
+  - addAttributesToSVGElement:
+    attributes:
+      - width: 1em
+        height: 1em
