--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -1,4 +1,5 @@
 {
+  "[handlebars]": { "editor.formatOnSave": false },
   "[yaml]": { "editor.autoIndent": true },
   "bracketPairColorizer.forceIterationColorCycle": true,
   "bracketPairColorizer.forceUniqueOpeningColor": true,
@@ -33,6 +34,7 @@
   "css.validate": false,
   "editor.accessibilitySupport": "off",
   "editor.autoClosingQuotes": "always",
+  "editor.cursorBlinking": "phase",
   "editor.foldingStrategy": "indentation",
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
@@ -51,6 +53,7 @@
   },
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "all",
+  "editor.smoothScrolling": true,
   "editor.suggest.localityBonus": true,
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
@@ -63,6 +66,7 @@
   "eslint.autoFixOnSave": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "explorer.openEditors.visible": 0,
   "extensions.autoCheckUpdates": false,
   "extensions.autoUpdate": false,
   "extensions.ignoreRecommendations": true,
@@ -75,6 +79,7 @@
     "**/tmp": true
   },
   "javascript.updateImportsOnFileMove.enabled": "always",
+  "javascript.validate.enable": false,
   "less.validate": false,
   "markdown.preview.fontFamily": "{{ user_font }}, monospace",
   "markdown.preview.fontSize": 16,
@@ -107,6 +112,7 @@
   "workbench.list.horizontalScrolling": true,
   "workbench.list.keyboardNavigation": "filter",
   "workbench.settings.editor": "json",
+  "workbench.settings.enableNaturalLanguageSearch": false,
   "workbench.settings.useSplitJSON": true,
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
