refactor(font): delete hack, iosevka-slab & add roboto-slab & add tag for updating related roles

--- a/roles/cinnamon/tasks/main.yml
+++ b/roles/cinnamon/tasks/main.yml
@@ -23,7 +23,9 @@
 - import_tasks: "{{ helpers }}/dconf.yml"
   vars:
     dconf_facts: "{{ cinnamon_settings }}"
-  tags: "dconf_cinnamon"
+  tags:
+    - "user_font"
+    - "dconf_cinnamon"
 
 - import_tasks: "applet.yml"
   tags: "cinnamon_applet"
