--- a/roles/zeal/tasks/main.yml
+++ b/roles/zeal/tasks/main.yml
@@ -14,4 +14,6 @@
     template_facts:
       - src: "Zeal.conf"
         dest: "{{ user_config }}/Zeal"
-  tags: "template_zeal"
+  tags:
+    - "user_font"
+    - "template_zeal"
