--- a/vars.yml
+++ b/vars.yml
@@ -6,7 +6,7 @@ user_config: "{{ user_home }}/.config"
 user_default_editor: "vscodium"
 user_font_interface: "Roboto"
 user_font_monospace: "Iosevka Term SS08"
-user_font_serif: "Iosevka Slab"
+user_font_serif: "Roboto Slab"
 user_font: "Iosevka SS08"
 user_home: '{{ "$HOME" | expandvars }}'
 user_storage_ext: "/media/{{ ansible_user_id }}/12f3d18b-ce5f-4548-bf4e-4b1d1ca46f10"
