--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -55,7 +55,7 @@
     line: '{{ ''user_pref("'' ~ item.key ~ ''", '' ~ item.value ~ ");" }}'
   loop:
     - key: "app.update.auto"
-      value: "false"
+      value: "true"
     - key: "browser.startup.homepage"
       value: '"about:logo"'
     - key: "browser.startup.page"
