refactor(pre_commit): delete zsh dependence & unnecessary path initialization

--- a/roles/pre_commit/tasks/main.yml
+++ b/roles/pre_commit/tasks/main.yml
@@ -12,9 +12,8 @@
   tags: "copy_pre_commit"
 
 - name: install pre-commit to git hooks
-  shell: source ~/.zshrc && pre-commit install --config .pre-commit-config.yml
+  command: "~/.local/bin/pre-commit install --config .pre-commit-config.yml"
   args:
-    executable: '{{ lookup("pipe", "which zsh") }}'
     chdir: "{{ playbook_dir }}"
   changed_when: False
   tags: "pre_commit_install"
