--- a/roles/firefox/templates/profiles.ini
+++ b/roles/firefox/templates/profiles.ini
@@ -1,8 +1,12 @@
+[Install4F96D1932A9F858E]
+Default={{ firefox_profile_name }}
+Locked=1
+
 [General]
 StartWithLastProfile=1
 
 [Profile0]
-Name=custom_user
+Name={{ firefox_profile_name }}
 IsRelative=1
 Path={{ firefox_profile_name }}
 Default=1
