fix(vscodium): add correct entry_name for mime

--- a/roles/vscodium/tasks/main.yml
+++ b/roles/vscodium/tasks/main.yml
@@ -39,7 +39,7 @@
 - import_tasks: "{{ helpers }}/mime.yml"
   vars:
     mime_facts:
-      entry_name: "vscodium"
+      entry_name: "codium"
       type:
         - "application/javascript"
         - "application/json"
