refactor(nvm): delete extra commands from the installation task and add an update alias

--- a/roles/nvm/tasks/main.yml
+++ b/roles/nvm/tasks/main.yml
@@ -23,9 +23,7 @@
 - name: install lts version of node
   command: '{{ ansible_user_shell }} -c "source ~/.nvm/nvm.sh; {{ item }}"'
   loop:
-    - "nvm install --lts"
-    - "nvm alias default node"
-    - "nvm use --lts"
+    - "nvm install 'lts/*'"
   args:
     removes: "{{ nvm_dir }}"
   tags: "nvm"
