feat(vscodium): add extension selectline-statusbar

--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -10,3 +10,4 @@ vscodium_extensions:
   - "ms-python.python"
   - "shinnn.stylelint"
   - "streetsidesoftware.code-spell-checker"
+  - "tomoki1207.selectline-statusbar"
