--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -1,6 +1,13 @@
 {
   "[handlebars]": { "editor.formatOnSave": false },
   "[yaml]": { "editor.autoIndent": true },
+  "bracketPairColorizer.consecutivePairColors": [
+    "()",
+    "[]",
+    "{}",
+    ["Gold", "Orchid", "LightSkyBlue", "Aquamarine"],
+    "Red"
+  ],
   "bracketPairColorizer.forceIterationColorCycle": true,
   "bracketPairColorizer.forceUniqueOpeningColor": true,
   "bracketPairColorizer.scopeLineCSS": [
