--- a/roles/nemo/defaults/main.yml
+++ b/roles/nemo/defaults/main.yml
@@ -7,8 +7,8 @@ nemo_bookmarks:
   - "{{ user_storage }}/laptop"
   - "{{ user_storage }}/org"
   - "{{ user_storage }}/podcast"
-  - "{{ user_storage }}/sync"
   - "{{ user_storage }}/video"
+  - "{{ user_home }}/.local/share/torbrowser/tbb/x86_64/tor-browser_en-US/Browser"
 
 nemo_settings:
   - key: "/org/nemo/desktop/computer-icon-visible"
