fix(mpv): override built-in subtitles settings

--- a/roles/mpv/templates/mpv.conf
+++ b/roles/mpv/templates/mpv.conf
@@ -7,7 +7,12 @@ save-position-on-quit=yes
 screenshot-directory=~/Pictures
 screenshot-template=shot%n
 stop-screensaver=yes
+
+# subtitles
+embeddedfonts=no
+sub-ass-override=strip
 sub-auto=all
+sub-color='#f0f0f0'
 sub-font-size=35
 
 input-conf={{ user_config }}/mpv/input.conf
