refactor(firefox): update and hide userContent.css

--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -54,10 +54,12 @@
         dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}"
       - src: "bookmarks.html"
         dest: "{{ tor_browser_config_dir }}"
-      - src: "userContent.css"
+      - src: "userContent.css.vault"
         dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}/chrome"
-      - src: "userContent.css"
+        filename: "userContent.css"
+      - src: "userContent.css.vault"
         dest: "{{ tor_browser_config_dir }}/chrome"
+        filename: "userContent.css"
   tags: "copy_firefox"
 
 - import_tasks: "{{ helpers }}/launcher.yml"
