--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -45,21 +45,26 @@
     - "user_font"
     - "template_firefox"
 
-- import_tasks: "{{ helpers }}/copy.yml"
-  vars:
-    copy_facts:
-      - src: "xulstore.json"
-        dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}"
-      - src: "bookmarks.html"
-        dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}"
-      - src: "bookmarks.html"
-        dest: "{{ tor_browser_config_dir }}"
-      - src: "userContent.css.vault"
-        dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}/chrome"
-        filename: "userContent.css"
-      - src: "userContent.css.vault"
-        dest: "{{ tor_browser_config_dir }}/chrome"
-        filename: "userContent.css"
+- block:
+    - import_tasks: "{{ helpers }}/copy.yml"
+      vars:
+        copy_facts:
+          - src: "xulstore.json"
+            dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}"
+          - src: "bookmarks.html"
+            dest: "{{ tor_browser_config_dir }}"
+          - src: "userContent.css.vault"
+            dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}/chrome"
+            filename: "userContent.css"
+          - src: "userContent.css.vault"
+            dest: "{{ tor_browser_config_dir }}/chrome"
+            filename: "userContent.css"
+          - src: "bookmarks.html"
+            dest: "{{ firefox_config_dir }}/{{ firefox_profile_name }}"
+  rescue:
+    - name: copy without vault password
+      debug:
+        msg: "A vault password must be specified"
   tags: "copy_firefox"
 
 - import_tasks: "{{ helpers }}/launcher.yml"
