feat(gimp): add gmic faves files

--- a/roles/gimp/tasks/main.yml
+++ b/roles/gimp/tasks/main.yml
@@ -16,4 +16,6 @@
     copy_facts:
       - src: "gimprc"
         dest: "{{ gimp_config_path }}"
+      - src: "gmic_qt_faves.json"
+        dest: "{{ gmic_config_path }}"
   tags: "copy_gimp"
