refactor(mkcert): update database path

--- a/roles/mkcert/defaults/main.yml
+++ b/roles/mkcert/defaults/main.yml
@@ -1,2 +1,3 @@
 mkcert_ssl_path: "{{ user_home }}/.ssl"
 mkcert_database_path: "{{ user_home }}/.pki/nssdb"
+mkcert_firefox_path: "{{ user_home }}/.mozilla/firefox/{{ ansible_user_id }}"
