--- a/roles/filesystem/tasks/main.yml
+++ b/roles/filesystem/tasks/main.yml
@@ -31,3 +31,10 @@
   file:
     path: "{{ user_storage }}/lost+found"
     state: absent
+
+- name: increase the limit of inodes
+  become: True
+  sysctl:
+    name: fs.inotify.max_user_watches
+    value: "524288"
+    state: present
